--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@
   <section class="section" id="home">
     <div class="container">
       <h1>Literatura española hasta el siglo XVIII</h1>
-      <p class="muted">Web simple (un archivo) con 5 épocas, descargas, enlace a foro y taller de miniserie. Súbela tal cual a GitHub Pages, Netlify (Drop) o WordPress (bloque HTML).</p>
       <div style="display:flex;gap:.5rem;flex-wrap:wrap;margin-top:1rem">
         <a class="btn" href="#edad-media">Ir a Edad Media</a>
         <a class="btn" href="#descargas">Ir a Descargas</a>
@@ -87,7 +86,6 @@
           <ul class="list">
             <li><a href="materials/1. Edad Media.pdf" download>⬇️ Unidad 1. La literatura en la Edad Media (PDF)</a></li>
           </ul>
-          <p class="muted">Coloca tus PDFs en <code>materials/</code> (misma carpeta que este archivo).</p>
         </div>
         <div class="card">
           <h3>Contexto histórico y claves</h3>
@@ -211,7 +209,6 @@
             <tr><td>Cuaderno de actividades</td><td><a href="materials/actividades.pdf" download>⬇️ Descargar</a></td></tr>
           </tbody>
         </table>
-        <p class="muted">Pon aquí tus versiones finales cuando las tengas.</p>
       </div>
     </div>
   </section>
@@ -222,8 +219,7 @@
       <h2>💬 Foro</h2>
       <div class="card">
         <p>Usaremos el foro de la plataforma del centro para usuarios y notificaciones.</p>
-        <p><a id=" foroLink" class="btn primary" href="https://tu-moodle.ejemplo/curso/foro" target="_blank" rel="noreferrer">Abrir foro del curso</a></p>
-        <p class="muted">✏️ Consejo: cambia la URL de arriba por la de tu curso (abre este archivo y reemplaza el enlace).</p>
+        <p><a id=" foroLink" class="btn primary" href="https://clasesporzoom.com" target="_blank" rel="noreferrer">Abrir foro del curso</a></p>
       </div>
     </div>
   </section>
