--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     .section{padding:3rem 0}
     .card{background:var(--card);border:1px solid var(--border);border-radius:1rem;padding:1rem}
     .grid{display:grid;gap:1rem}
-    @media(min-width:900px){.grid-3{grid-template-columns: 1fr 2fr;}}
+    @media(min-width:900px){.grid-3{grid-template-columns: 1fr 1fr 1fr;}}
     h1{font-size:clamp(1.8rem,2.5vw,3rem);margin:.3rem 0}
     h2{font-size:clamp(1.5rem,2vw,2.2rem);margin:0 0 .5rem 0}
     h3{margin:.5rem 0}
@@ -45,6 +45,10 @@
     /* Form miniserie */
     input, textarea, select{width:100%;padding:.6rem;border:1px solid var(--border);border-radius:.6rem}
     textarea{min-height:160px}
+    /* Chips sesiones */
+    .chip{display:inline-block;padding:.25rem .6rem;border:1px solid var(--border);border-radius:9999px;margin:.15rem  .25rem;background:#fff;cursor:pointer}
+    .chip.active{background:#111827;color:#fff;border-color:#111827}
+    .hint{font-size:.9rem;color:#334155;margin:.25rem 0 .5rem}
   </style>
 </head>
 <body>
@@ -68,9 +72,13 @@
   <section class="section" id="home">
     <div class="container">
       <h1>Literatura española hasta el siglo XVIII</h1>
+      <p class="muted">Cinco épocas, materiales completos y <b>cuadernos de la sesión</b> para trabajar en clase. Elige tu época y pulsa la sesión para descargar.</p>
       <div style="display:flex;gap:.5rem;flex-wrap:wrap;margin-top:1rem">
         <a class="btn" href="#edad-media">Ir a Edad Media</a>
-        <a class="btn" href="#descargas">Ir a Descargas</a>
+        <a class="btn" href="#renacimiento">Ir a Renacimiento</a>
+        <a class="btn" href="#cervantes">Ir a Cervantes</a>
+        <a class="btn" href="#barroco">Ir a Barroco</a>
+        <a class="btn" href="#ilustracion">Ir a Ilustración</a>
         <a class="btn primary" href="#miniserie">Ir a Miniserie</a>
       </div>
     </div>
@@ -96,6 +104,12 @@
             <li><b>Comparador:</b> Cid (sujeto feudal) ↔ Quijote (sujeto moderno)</li>
           </ul>
         </div>
+        <div class="card">
+          <h3>Cuadernos de la sesión</h3>
+          <p class="hint">Pulsa la sesión para descargar el cuaderno del día.</p>
+          <div id="chips-edad-media"></div>
+          <ul class="list" id="lista-edad-media"></ul>
+        </div>
       </div>
     </div>
   </section>
@@ -120,11 +134,17 @@
             <li><b>Comparador:</b> Garcilaso (armonía) ↔ Barroco (contraste)</li>
           </ul>
         </div>
+        <div class="card">
+          <h3>Cuadernos de la sesión</h3>
+          <p class="hint">Pulsa la sesión para descargar.</p>
+          <div id="chips-renacimiento"></div>
+          <ul class="list" id="lista-renacimiento"></ul>
+        </div>
       </div>
     </div>
   </section>
 
-  <!-- CERVANTES -->
+  <!-- CERVANTES (propia) -->
   <section class="section" id="cervantes">
     <div class="container">
       <h2>🪶 Cervantes</h2>
@@ -143,6 +163,12 @@
             <li><b>3 claves del contexto:</b> Sujeto moderno · Imprenta y mercado · Contradicciones</li>
             <li><b>Comparador:</b> Quijote (imprenta) ↔ Cid (canto oral)</li>
           </ul>
+        </div>
+        <div class="card">
+          <h3>Cuadernos de la sesión</h3>
+          <p class="hint">(Pronto) Aquí aparecerán los cuadernos específicos de Cervantes. Cuando subas los PDF, añade sus rutas en el bloque <code>CUADERNOS['Cervantes']</code>.</p>
+          <div id="chips-cervantes"></div>
+          <ul class="list" id="lista-cervantes"></ul>
         </div>
       </div>
     </div>
@@ -168,6 +194,12 @@
             <li><b>Comparador:</b> Barroco (exceso) ↔ Ilustración (claridad)</li>
           </ul>
         </div>
+        <div class="card">
+          <h3>Cuadernos de la sesión</h3>
+          <p class="hint">(Pronto) Publicaremos los cuadernos del Barroco aquí.</p>
+          <div id="chips-barroco"></div>
+          <ul class="list" id="lista-barroco"></ul>
+        </div>
       </div>
     </div>
   </section>
@@ -192,6 +224,12 @@
             <li><b>Comparador:</b> Moratín (razón pública) tras el Barroco</li>
           </ul>
         </div>
+        <div class="card">
+          <h3>Cuadernos de la sesión</h3>
+          <p class="hint">(Pronto) Publicaremos los cuadernos de Ilustración aquí.</p>
+          <div id="chips-ilustracion"></div>
+          <ul class="list" id="lista-ilustracion"></ul>
+        </div>
       </div>
     </div>
   </section>
@@ -206,9 +244,10 @@
           <tbody>
             <tr><td>Syllabus del curso</td><td><a href="materials/syllabus.pdf" download>⬇️ Descargar</a></td></tr>
             <tr><td>Programa detallado sesión a sesión</td><td><a href="materials/programa-detallado.pdf" download>⬇️ Descargar</a></td></tr>
-            <tr><td>Cuaderno de actividades</td><td><a href="materials/actividades.pdf" download>⬇️ Descargar</a></td></tr>
+            <tr><td>Cuaderno de actividades (general)</td><td><a href="materials/actividades.pdf" download>⬇️ Descargar</a></td></tr>
           </tbody>
         </table>
+        <p class="muted" style="margin-top:.5rem">En cada época tienes los <b>cuadernos por sesión</b> con descarga directa.</p>
       </div>
     </div>
   </section>
@@ -219,7 +258,7 @@
       <h2>💬 Foro</h2>
       <div class="card">
         <p>Usaremos el foro de la plataforma del centro para usuarios y notificaciones.</p>
-        <p><a id=" foroLink" class="btn primary" href="https://clasesporzoom.com" target="_blank" rel="noreferrer">Abrir foro del curso</a></p>
+        <p><a class="btn primary" href="https://clasesporzoom.com" target="_blank" rel="noreferrer">Abrir foro del curso</a></p>
       </div>
     </div>
   </section>
@@ -264,7 +303,106 @@
     // Año
     document.getElementById('y').textContent = new Date().getFullYear();
 
-    // Plantilla de guion
+    // Datos de cuadernos por época (rutas reales en tu repo)
+    const CUADERNOS = {
+      "Edad Media": {
+        sesiones: [
+          { t: 'Sesión 1 · Literatura Medieval', href: 'materials/cuadernos/Sesion1_Literatura_Medieval.pdf' },
+          { t: 'Sesión 2 · Lírica Medieval', href: 'materials/cuadernos/Sesion2_Lirica_Medieval.pdf' },
+          { t: 'Sesión 3 · Cantar de Mio Cid', href: 'materials/cuadernos/Sesion3_Cantar_de_Mio_Cid.pdf' },
+          { t: 'Sesión 4 · Cid vs. Lázaro', href: 'materials/cuadernos/Sesion4_Cid_vs_Lazaro.pdf' },
+          { t: 'Sesión 5 · Berceo', href: 'materials/cuadernos/Sesion5_Berceo.pdf' },
+          { t: 'Sesión 6 · Arcipreste', href: 'materials/cuadernos/Sesion6_Arcipreste.pdf' },
+        ],
+        extras: [
+          { t: 'Módulo 1 · Literatura Medieval', href: 'materials/cuadernos/Modulo1_Literatura_Medieval.pdf' },
+          { t: 'Lectura · Afrenta de Corpes', href: 'materials/cuadernos/Lectura_Afrenta_de_Corpes.pdf' },
+          { t: 'Lectura · Bodas (hijas del Cid)', href: 'materials/cuadernos/Lectura_Bodas_Hijas_Cid.pdf' },
+        ]
+      },
+      "Renacimiento": {
+        sesiones: [
+          { t: 'Sesión 7 · Renacimiento', href: 'materials/cuadernos/Sesion7_Renacimiento.pdf' },
+          { t: 'Sesión 8 · Garcilaso', href: 'materials/cuadernos/Sesion8_Garcilaso.pdf' },
+          { t: 'Sesión 9 · Fray Luis & San Juan', href: 'materials/cuadernos/Sesion9_FrayLuis_SanJuan.pdf' },
+        ],
+        extras: []
+      },
+      "Cervantes": {
+        sesiones: [
+          // Ejemplos (activa cuando subas los PDF y cambia las rutas):
+          // { t: 'Sesión 10 · Quijote I', href: 'materials/cuadernos/Sesion10_Quijote_I.pdf' },
+          // { t: 'Sesión 11 · Quijote II', href: 'materials/cuadernos/Sesion11_Quijote_II.pdf' },
+        ],
+        extras: []
+      },
+      "Barroco": {
+        sesiones: [
+          // { t: 'Sesión 12 · Góngora', href: 'materials/cuadernos/Sesion12_Gongora.pdf' },
+          // { t: 'Sesión 13 · Quevedo', href: 'materials/cuadernos/Sesion13_Quevedo.pdf' },
+          // { t: 'Sesión 14 · Calderón', href: 'materials/cuadernos/Sesion14_Calderon.pdf' },
+        ],
+        extras: []
+      },
+      "Ilustración": {
+        sesiones: [
+          // { t: 'Sesión 15 · Feijoo', href: 'materials/cuadernos/Sesion15_Feijoo.pdf' },
+          // { t: 'Sesión 16 · Moratín', href: 'materials/cuadernos/Sesion16_Moratin.pdf' },
+        ],
+        extras: []
+      },
+    };
+
+    function renderCuadernos(epoca, chipsId, listId){
+      const data = CUADERNOS[epoca] || { sesiones: [], extras: [] };
+      const chips = document.getElementById(chipsId);
+      const list = document.getElementById(listId);
+      if(!chips || !list) return;
+
+      // chips sesiones
+      chips.innerHTML = '';
+      data.sesiones.forEach((s)=>{
+        const span = document.createElement('span');
+        span.className = 'chip'; span.textContent = s.t;
+        span.onclick = ()=>{
+          document.querySelectorAll('#'+chipsId+' .chip').forEach(c=>c.classList.remove('active'));
+          span.classList.add('active');
+          list.innerHTML = `<li><a class="btn primary" href="${s.href}" download>⬇️ Descargar cuaderno (${s.t})</a></li>`;
+        };
+        chips.appendChild(span);
+      });
+
+      // por defecto
+      if(data.sesiones[0]){
+        setTimeout(()=> chips.querySelector('.chip')?.click(), 0);
+      } else {
+        list.innerHTML = '<li class="muted">No hay cuadernos subidos para esta época (todavía).</li>';
+      }
+
+      // extras
+      if(data.extras && data.extras.length){
+        const extrasHeader = document.createElement('h4');
+        extrasHeader.textContent = 'Lecturas y materiales extra';
+        extrasHeader.style.marginTop = '.75rem';
+        list.parentElement.appendChild(extrasHeader);
+        const ulExtras = document.createElement('ul'); ulExtras.className = 'list';
+        data.extras.forEach(e=>{
+          const li = document.createElement('li');
+          li.innerHTML = `<a href="${e.href}" download>⬇️ ${e.t}</a>`;
+          ulExtras.appendChild(li);
+        });
+        list.parentElement.appendChild(ulExtras);
+      }
+    }
+
+    // Render
+    renderCuadernos('Edad Media','chips-edad-media','lista-edad-media');
+    renderCuadernos('Renacimiento','chips-renacimiento','lista-renacimiento');
+    renderCuadernos('Cervantes','chips-cervantes','lista-cervantes');
+    renderCuadernos('Barroco','chips-barroco','lista-barroco');
+    renderCuadernos('Ilustración','chips-ilustracion','lista-ilustracion');
+
+    // Miniserie: plantilla y descarga
     const plantilla = (obra) => `# ${obra} — Guion breve (B1)
 
 Título de la escena:
@@ -292,14 +430,8 @@ DIÁLOGO (máx. 2-3 páginas)
     const sinopsis = document.getElementById('sinopsis');
     const guion = document.getElementById('guion');
 
-    document.getElementById('plantilla').onclick = () => {
-      guion.value = plantilla(obra.value);
-    };
-    document.getElementById('limpiar').onclick = () => {
-      titulo.value = '';
-      sinopsis.value = '';
-      guion.value = '';
-    };
+    document.getElementById('plantilla').onclick = () => { guion.value = plantilla(obra.value); };
+    document.getElementById('limpiar').onclick = () => { titulo.value = ''; sinopsis.value = ''; guion.value = ''; };
     document.getElementById('guardar').onclick = () => {
       const name = `${obra.value}-${(titulo.value||'capitulo').replace(/\s+/g,'_')}.txt`;
       const content = guion.value || plantilla(obra.value);
