--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
           <tbody>
             <tr><td>Syllabus del curso</td><td><a href="materials/syllabus.pdf" download>⬇️ Descargar</a></td></tr>
             <tr><td>Programa detallado sesión a sesión</td><td><a href="materials/programa-detallado.pdf" download>⬇️ Descargar</a></td></tr>
-            <tr><td>Cuaderno de actividades (general)</td><td><a href="materials/actividades.pdf" download>⬇️ Descargar</a></td></tr>
+            <tr><td>Cuaderno de actividades (general)</td><td><a href="materials/cuadernos/Modulo1_Literatura_Medieval.pdf" download>⬇️ Descargar</a></td></tr>
           </tbody>
         </table>
         <p class="muted" style="margin-top:.5rem">En cada época tienes los <b>cuadernos por sesión</b> con descarga directa.</p>
