--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         </div>
         <div class="card">
           <h3>Cuadernos de la sesión</h3>
-          <p class="hint">(Pronto) Aquí aparecerán los cuadernos específicos de Cervantes. Añádelos al objeto CUADERNOS cuando subas los PDFs.</p>
+          <p class="hint">(Pronto) Aquí aparecerán los cuadernos específicos de Cervantes.</p>
           <div id="chips-cervantes"></div>
           <ul class="list" id="lista-cervantes"></ul>
         </div>
@@ -215,7 +215,7 @@
         </div>
         <div class="card">
           <h3>Cuadernos de la sesión</h3>
-          <p class="hint">(Pronto) Añade aquí los cuadernos del Barroco.</p>
+          <p class="hint">(Pronto) Pronto los cuadernos del Barroco.</p>
           <div id="chips-barroco"></div>
           <ul class="list" id="lista-barroco"></ul>
         </div>
@@ -245,7 +245,7 @@
         </div>
         <div class="card">
           <h3>Cuadernos de la sesión</h3>
-          <p class="hint">(Pronto) Añade aquí los cuadernos de Ilustración.</p>
+          <p class="hint">(Pronto) Pronto los cuadernos de Ilustración.</p>
           <div id="chips-ilustracion"></div>
           <ul class="list" id="lista-ilustracion"></ul>
         </div>
