--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
     .overlay{position:fixed;inset:0;background:rgba(0,0,0,.6);display:none;z-index:50}
     .overlay.show{display:block}
     .viewer{position:fixed;inset:5% 3%;background:#111827;border-radius:1rem;box-shadow:0 25px 50px rgba(0,0,0,.35);display:flex;flex-direction:column;z-index:60}
-    .viewer .top{display:flex;align-items:center;gap:.5rem;padding:.5rem .75rem;background:#0f172a;color:#fff;border-top-left-radius:1rem;border-top-right-radius:1rem}
+    .viewer .top{display:flex;align-items:center;gap:.5rem;padding:.6rem .75rem;background:#0f172a;color:#fff;border-top-left-radius:1rem;border-top-right-radius:1rem;flex-wrap:wrap}
     .viewer .top .spacer{flex:1}
     .viewer iframe{flex:1;border:0;border-bottom-left-radius:1rem;border-bottom-right-radius:1rem;background:#fff}
-    .viewer .btn{border-color:#334155}
-    @media (max-width: 640px){ .viewer{inset:4% 2%} .viewer .top{flex-wrap:wrap;gap:.4rem} }
+    .viewer .btn{border-color:#334155;background:#fff;color:#0f172a;font-weight:600;padding:.45rem .8rem;border-radius:.65rem;text-decoration:none;display:inline-flex;align-items:center;gap:.4rem}
+    @media (max-width: 640px){ .viewer{inset:4% 2%} .viewer .top{flex-wrap:wrap;gap:.5rem} .viewer .btn{flex:1;justify-content:center;min-width:120px} #fileName{flex-basis:100%;font-size:1rem} } .viewer .top{flex-wrap:wrap;gap:.4rem} }
   </style>
 </head>
 <body>
